<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="org.sopt.dosopttemplate.presentation.login.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="60dp"
    android:paddingVertical="60dp"
    tools:context=".presentation.login.LoginActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/id_title"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/welcome" />

    <EditText
        android:layout_width="0dp"
        android:id="@+id/inputTextId"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/id"
        app:layout_constraintStart_toStartOf="@id/id"
        android:textSize="20dp"
        android:hint="아이디를 입력하세요."
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/pw_title"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputTextId" />
    <EditText
        android:layout_width="0dp"
        android:id="@+id/inputTextPw"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pw"
        app:layout_constraintStart_toStartOf="@id/pw"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:hint="비밀번호를 입력하세요."/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/loginButton"
        android:layout_marginBottom="60dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>